--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,15 @@
-pygments: true
-permalink: pretty
-markdown: maruku
-#baseurl:    /blueness
-source:      .
-destination: ./_site
-exclude: ['README.markdown']
+name: Your New Jekyll Site
+description: Blogging about stuffs
+meta_description: "Your New Jekyll Site, Blogging about stuffs"
+
+markdown: redcarpet
+highlighter: pygments
+logo: false
+paginate: 15
+baseurl: /
+domain_name: 'http://yourblog-domain.com'
+google_analytics: 'UA-XXXXXXXX-X'
+
+# Details for the RSS feed generator
+url:            'blog url'
+author:         'Your Name'
