--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
-name: Your New Jekyll Site
+name: My Jekyll Site
 description: Blogging about stuffs
-meta_description: "Your New Jekyll Site, Blogging about stuffs"
+meta_description: "My Jekyll Site, Blogging about stuffs"
 
 markdown: redcarpet
 highlighter: pygments
 logo: false
 paginate: 15
 baseurl: /
-domain_name: 'http://yourblog-domain.com'
-google_analytics: 'UA-XXXXXXXX-X'
+domain_name: 'http://oryx2.github.io/'
+#google_analytics: 'UA-XXXXXXXX-X'
 
 # Details for the RSS feed generator
-url:            'blog url'
-author:         'Your Name'
+url:            'oryx2.github.io'
+author:         'oxry2'
